--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": false,
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-test-renderer": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
