--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
+    "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-test-renderer": "^16.8.6"
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
+    "html-loader": "^0.5.5",
+    "prettier": "^1.17.0",
+    "webpack-node-externals": "^1.7.2",
+    "react-test-renderer": "^16.8.6",
     "@babel/core": "7.4.4",
     "@babel/runtime": "^7.4.4",
     "@svgr/webpack": "4.1.0",
