--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^2.0.0",
     "express": "^4.16.4",
+    "node-zopfli-es": "^1.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "shrink-ray-current": "^4.0.0"
   },
   "devDependencies": {
     "html-loader": "^0.5.5",
